Finally fix bug on mobile where links/form inputs cant be clicked

--- a/public/stylesheets/sass/_hammer.scss
+++ b/public/stylesheets/sass/_hammer.scss
@@ -55,7 +55,7 @@
     text-align: center;
   }
   .hammer-container{
-    padding: 0 5px 5px 5px !important;
+    padding: 0 0 5px 0 !important;
   }
   .left, .right{
     float: left !important;
